Test link page and add new properties file

--- a/cn.hiproject.pm.shared/src/main/resources/cn/hiproject/pm/shared/texts/Texts.properties
+++ b/cn.hiproject.pm.shared/src/main/resources/cn/hiproject/pm/shared/texts/Texts.properties
@@ -1,6 +1,12 @@
 About=About
+Account=Account\r\n
+AccountFullName=Account Full Name
+AccountId=Account Id 
+AccountName=Account Name\r\n
 ApplicationTitle=Hi Project Management
 AuthorizationFailed=Permission denied
+Country=Country
+Email=Email
 Exit=Exit
 File=File
 GateReview=Gate Review
@@ -8,9 +14,12 @@ HelloWorld=Hello World
 Message=Message
 MessageFromServer=Message from Server
 Options=Options
+Password0=Password
+Phone=Phone
 ProjectId=Project Id
 ProjectList=Project List
 Projects=Projects
 QuickAccess=QuickAccess\r\n
 Settings=Settings
+Status=Status
 Work=Work
