Creating and accessing database

--- a/cn.hiproject.pm.server/pom.xml
+++ b/cn.hiproject.pm.server/pom.xml
@@ -1,36 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-  <modelVersion>4.0.0</modelVersion>
+	<modelVersion>4.0.0</modelVersion>
 
-  <parent>
-    <groupId>cn.hiproject.pm</groupId>
-    <artifactId>cn.hiproject.pm</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
-    <relativePath>../cn.hiproject.pm/pom.xml</relativePath>
-  </parent>
+	<parent>
+		<groupId>cn.hiproject.pm</groupId>
+		<artifactId>cn.hiproject.pm</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
+		<relativePath>../cn.hiproject.pm/pom.xml</relativePath>
+	</parent>
 
-  <artifactId>cn.hiproject.pm.server</artifactId>
+	<artifactId>cn.hiproject.pm.server</artifactId>
 
-  <name>Hi Project Management Server</name>
+	<name>Hi Project Management Server</name>
 
-  <dependencies>
-    <dependency>
-      <artifactId>org.eclipse.scout.rt.server</artifactId>
-      <groupId>org.eclipse.scout.rt</groupId>
-    </dependency>
-    <dependency>
-      <groupId>cn.hiproject.pm</groupId>
-      <artifactId>cn.hiproject.pm.shared</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.eclipse.scout.rt</groupId>
-      <artifactId>org.eclipse.scout.rt.server.test</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>javax.servlet-api</artifactId>
-    </dependency>
-  </dependencies>
+	<dependencies>
+		<dependency>
+			<artifactId>org.eclipse.scout.rt.server</artifactId>
+			<groupId>org.eclipse.scout.rt</groupId>
+		</dependency>
+		<dependency>
+			<groupId>cn.hiproject.pm</groupId>
+			<artifactId>cn.hiproject.pm.shared</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.scout.rt</groupId>
+			<artifactId>org.eclipse.scout.rt.server.test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+		</dependency>
+
+		<!-- database related dependencies -->
+		<dependency>
+			<groupId>org.eclipse.scout.rt</groupId>
+			<artifactId>org.eclipse.scout.rt.server.jdbc</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.derby</groupId>
+			<artifactId>derby</artifactId>
+			<version>10.11.1.1</version>
+		</dependency>
+
+	</dependencies>
 </project>
