--- a/cn.hiproject.pm.server.app.dev/src/main/resources/config.properties
+++ b/cn.hiproject.pm.server.app.dev/src/main/resources/config.properties
@@ -10,3 +10,11 @@ user.area=${user.home}/cn.hiproject.pm.cn.hiproject.pm.server.dev
 
 ### Development
 scout.dev.mode=true
+
+### Database
+projects.database.jdbc.mapping.name=jdbc:derby:memory:projects-database
+projects.database.autocreate=true
+projects.database.autopopulate=true
+
+### Application specific
+projects.superuser=system
