--- a/cn.hiproject.pm.server.app.war/pom.xml
+++ b/cn.hiproject.pm.server.app.war/pom.xml
@@ -1,28 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-  <modelVersion>4.0.0</modelVersion>
+	<modelVersion>4.0.0</modelVersion>
 
-  <parent>
-    <groupId>cn.hiproject.pm</groupId>
-    <artifactId>cn.hiproject.pm</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
-    <relativePath>../cn.hiproject.pm/pom.xml</relativePath>
-  </parent>
+	<parent>
+		<groupId>cn.hiproject.pm</groupId>
+		<artifactId>cn.hiproject.pm</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
+		<relativePath>../cn.hiproject.pm/pom.xml</relativePath>
+	</parent>
 
-  <artifactId>cn.hiproject.pm.server.app.war</artifactId>
-  <packaging>war</packaging>
+	<artifactId>cn.hiproject.pm.server.app.war</artifactId>
+	<packaging>war</packaging>
 
-  <name>Hi Project Management Server WAR</name>
+	<name>Hi Project Management Server WAR</name>
 
-  <build>
-      <finalName>cn.hiproject.pm.cn.hiproject.pm.server</finalName>
-  </build>
+	<build>
+		<finalName>cn.hiproject.pm.cn.hiproject.pm.server</finalName>
+	</build>
 
-  <dependencies>
-    <dependency>
-      <groupId>cn.hiproject.pm</groupId>
-      <artifactId>cn.hiproject.pm.server</artifactId>
-    </dependency>
-  </dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>cn.hiproject.pm</groupId>
+			<artifactId>cn.hiproject.pm.server</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.eclipse.scout.rt</groupId>
+			<artifactId>org.eclipse.scout.rt.server.jdbc</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.derby</groupId>
+			<artifactId>derby</artifactId>
+			<version>10.11.1.1</version>
+		</dependency>
+
+	</dependencies>
 </project>
