--- a/cn.hiproject.pm.server/pom.xml
+++ b/cn.hiproject.pm.server/pom.xml
@@ -45,5 +45,18 @@
 			<version>10.11.1.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>3.2.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.27</version>
+		</dependency>
+
+
 	</dependencies>
 </project>
